[package]
name = "preprocessor"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
edition = "2018"

[dependencies]
syntax = { git = "https://github.com/rust-analyzer/rust-analyzer" }
walkdir = "2.3.1"
gumdrop = "0.8.0"
relative-path = "1.3.2"
log = "0.4.11"
env_logger = "0.7.1"
itertools = "0.9.0"